--- a/Projetos/games.html
+++ b/Projetos/games.html
@@ -14,7 +14,7 @@
         <p>Você já se perguntou o que é um jogo e ficou na duvida ?<br>então tire ela aqui conosco!</p>
         <nav>
             <a id="home" href="pag2.html" target="_blank" rel="external">home</a>
-            <a id="support" href="https://www.facebook.com/profile.php?id=100006153947411">fale conosco</a>
+            <a id="support" href="https://www.facebook.com/profile.php?id=100006153947411" target="_blank" rel="external">fale conosco</a>
         </nav>
     </header>
     <main>
