novos projetos e att
adicionei novos projetos e atualizei o codigo de alguns

--- a/prejetoredesocias/index.html
+++ b/prejetoredesocias/index.html
@@ -17,7 +17,12 @@
         </section>
 
         <section class="redes-sociais">
-
+           <a href="home.html" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt="home"></a> <br>
+           <a href="yotube.html" target="tela"> <img src="pacote-d013/imagens/logo-youtube.jpg" alt="logo-youtube"></a> <br>
+           <a href="github.html" target="tela"> <img src="pacote-d013/imagens/logo-github.jpg" alt=""></a> <br>
+           <a href="instagram.html" target="tela"> <img src="pacote-d013/imagens/logo-instagram.jpg" alt=""></a> <br>
+           <a href="twitter.html" target="tela"> <img src="pacote-d013/imagens/logo-twitter.jpg" alt=""></a> <br>
+           <a href="facebook.html" target="tela"> <img src="pacote-d013/imagens/logo-facebook.jpg" alt=""></a> <br>
 
         </section>
     </main>
