--- a/projeto felis/felis.html
+++ b/projeto felis/felis.html
@@ -10,158 +10,126 @@
 </head>
 
 <body>
-  <div id="corpo">
-
-
-    <header>
-      <nav id="navleft">
-
-        <a href="">SHOP NOW </a>
+  <header>
+    <div class="cabecalho">
+      <nav class="cabecalho-itens">
+        <a href="">SHOP NOW</a>
         <a href="">LOOKBOOK</a>
+
       </nav>
-      <div>
-        <h1 class="felis">FELIS</h1>
-      </div>
-      <nav id="navright">
-        <a href="">SEARCH</a>
-        <a id="cart" href="">CART &nbsp <span id="borda0">0</span></a>
+      <h1 class="cabecalho-titulo">FELIS</h1>
+      <nav class="cabecalho-itens2">
+        <a href="">SEARCH </a>
+        <a href="">CART <span class="cabecalho-circle">0</span></a>
+
+
+
+
       </nav>
-    </header>
-    <main>
-      <div class="mainstart">
-        <div class="ceumain">
-          <img id="culher" src="fotos/PORTRAIT (1).png" alt="">
-        </div>
-        <div class="textmain">
-          <h1>NEW WEEK, NEW ARRIVALS</h1>
-          <br>
-          <div class="textmaina">
-            <a href="">shop now</a>
-          </div>
-        </div>
-      </div>
-      <div class="maincenter">
-        <div class="topcenter">
-          <h1>OUR FAVORITES</h1>
-          <a href="">see all</a>
-        </div>
-        <div class="bottom-main">
-          <div class="fundomain">
-            <img id="fotosP" src="fotos/Rectangle 2.png" alt=""> <br>
-            <p>7 gold bags lari <br><span>490$</span></p>
-          </div>
-          <div class="bottom-main2">
-            <img id="fotosP" src="fotos/Rectangle 5.png" alt=""> <br>
-            <p>
-              white shirt dali <br>
-              <span>399$</span>
-          </div>
-        </div>
+    </div>
+  </header>
 
-        <div class="divimagem3">
-          <div class="imagem3">
-            <img id="fotosP" src="fotos/image 2.png" alt="">
-            <p>shitra handbag <br>
-              <span>299$</span>
-            </p>
-          </div>
-        </div>
-        <div class="trisal">
-          <div class="trisalfoto1">
-            <img src="fotos/image 3.png" alt="">
-          </div>
-          <div class="trisaltext">
-            <h1>
-              jewelry
-              <br>
-              handbags
-              <br>
-              sweaters
-              <br>
-              eyewear
-              <br>
-              shirts
-            </h1>
-          </div>
-          <div class="trisalfoto2">
-            <img src="fotos/image 4.png" alt="">
-          </div>
-        </div>
-        <div class="aboutcorpo">
-          <div class="aboutus">
-            <h1>ABOUT US</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-              mollit anim id est laborum.</p>
-            <a href="">READ MORE</a>
-          </div>
-          <div class="aboutfoto">
-            <img src="fotos/image 1.png" alt="">
-          </div>
-        </div>
-        <div class="mainfinal">
-          <h1>SIGN UP FOR OUR NEWSLETTER</h1>
-          <div class="imput">
-            <input type= "text"  name="email" id = "email" value = "YOUR EMAIL ADRESS" Placeholder = "exemplo@exemplo.com.br"><button>subiscribe 	&rarr;</button>
-          
-          </div>
-
-        </div>
-        <div class="mainfinal2">
-          <h1>FOLLOW US ON INSTAGRAM</h1>
-        </div>
-        <div>
-          <div class="mainfinalfoto">
-            <img src="fotos/Rectangle 7.png" alt="">
-            <img src="fotos/Rectangle 8.png" alt="">
-            <img src="fotos/Rectangle 9.png" alt="">
-          </div>
-        </div>
+  <main>
+    <div class="main-top">
+      <div class="main-top-img">
+        <img src="fotos/PORTRAIT (1).png" alt="">
       </div>
-    </main>
+      <div class="main-top-text">
+        <img src="fotos/star.png" alt="">
+        <h2 class="main-top-title">NEW WEEK, <br> NEW ARRIVALS</h2>
+        <p class="main-top-shop">show now</p>
+      </div>
+
+    </div>
+    <div class="main-top-min">
+      <p class="favorites">OUR FAVORITES</p>
+      <div class="main-top-min2">
+        <p>SEE ALL</p>
+      </div>
+    </div>
+    <div class="main-mid">
+      <div class="main-mid1">
+        <img src="fotos/Rectangle 2.png" alt="">
+        <p>7 golds bag lari</p>
+        <span>490$</span>
+      </div>
+      <div class="main-mid2">
+        <img src="fotos/Rectangle 5.png" alt="">
+        <p>white shirt dali</p>
+        <span>399$</span>
+      </div>
+
+    </div>
+    <div class="main-mid3">
+      <img src="fotos/image 2.png" alt="">
+      <p>shitra handbag</p>
+      <span>299$</span>
+    </div>
+    <div class="main-midi">
+      <img src="fotos/image 3.png" alt="">
+      <div class="main-midi-text">
+        <p>JEWELRY</p>
+        <p>HANDBAGS</p>
+        <p>SWEATERS</p>
+        <p>EYEWEAR</p>
+        <p>SHIRTS</p>
+      </div>
+      <div class="main-midi-img2">
+        <img src="fotos/image 4.png" alt="">
+      </div>
+    </div>
+    <div class="main-med-top">
+      <div class="main-med">
+        <h2 class="main-med-title">ABOUT US</h2>
+        <p class="main-med-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br> sed do eiusmod tempor incididunt ut labore et
+          dolore <br> magna aliqua. Ut enim ad minim veniam, quis nostrud <br> exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo <br> consequat. Duis aute irure dolor in reprehenderit in <br> voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. <br> Excepteur sint occaecat cupidatat non proident, sunt in <br>
+          culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <p class="main-med-link">READ MORE</p>
+      </div>
+      <div class="main-med-img"><img src="fotos/image 1.png" alt=""></div>
+    </div>
+
+    <div class="main-bottom">
+      <img  src="fotos/star.png" alt="">
+      <h2>SING UP FOR OUR NEWSLETTER</h2>
+      <label for="subscribe"></label>
+      <input type="text" name="subscribe" id="subscribe " placeholder="YOUR EMAIL ADRESS" title="">
+    </div>
+    <div class="main-bottom2">
+      <img src="fotos/star.png" alt="">
+      <p>FOLLOW US ON INSTAGRAM</p>
+      <img src="fotos/star.png" alt="">
+
+    </div>
+    <div class="trisal-bottom">
+      <img src="fotos/Rectangle 7.png" alt="">
+      <img src="fotos/Rectangle 8.png" alt="">
+      <img src="fotos/Rectangle 9.png" alt="">
+    </div>
+    <div class="final-felis">
+      <h1 class="final-text">FELIS</h1>
+      <ul class="final-lista1">
+        <li>SHOP NOW</li>
+        <li>COLLECTIONS</li>
+        <li>LOOKBOOK</li>
+        <li>SEARCH</li>
+        <li>CART</li>
+        <li>FAQ</li>
+        <li>CONTACT US</li>
+        <li>INSTAGRAM</li>
+      </ul>
+      <ul class="final-lista2">
+        <li>PRIVACY POLICY</li>
+        <li>TERMS OF SERVICE </li>
+      </ul>
 
 
-    <hr>
-    <footer>
-      <div class="footerd">
-        <div class="felisfooter">
-          <h1>FELIS</h1>
-        </div>
-        <div class="tabelafooter">
-          <ul>
-            <li>
-              <h2>Shop now</h2> <br>
-            <li>
-              <h2>COLLECTIONS</h2> <br>
-            <li>
-              <h2>lookbook</h2> <br>
-            <li>
-              <h2>search</h2> <br>
-            <li>
-              <h2>cart</h2> <br>
-            <li>
-              <h2> faq</h2> <br>
-            <li>
-              <h2>instagram</h2> <br>
-            <li>
-              <h2>contact US</h2> <br>
-            </ul>
-            <div class="tabela2">
-              <ul>
-                <li> <h2>privacy policy</h2> <br></li>
-                  <li><h2>terms of service</h2> <br></li>
-              </ul>
-          </div>
-          </div>
-         
-      </div>
-      <div class="baaka">
-        <p>@2021 website by rayane saada</p>
-      </div>
-    </footer>
-  </div>
+
+    </div>
+  </main>
 
 </body>
 
